<resources>
    <string name="app_name">AutoDetect</string>
    <string name="registr_button">Реєстрація</string>
    <string name="take_photo_button">Фотофіксація</string>
    <string name="openDB_button">Переглянути базу</string>
    <string name="main_text_registr">Заповніть нижче всі поля для реєстрації автомобіля:</string>
    <string name="number">Номер:</string>
    <string name="brand">Марка:</string>
    <string name="color">Колір:</string>
    <string name="city">Місто:</string>
    <string name="phone">Телефон:</string>
    <string name="email">Email:</string>
    <string name="text_hint_brand">Mazda RX-8</string>
    <string name="text_hint_color">Червоний</string>
    <string name="text_hint_city">Вінниця</string>
    <string name="text_hint_email">example@gmail.com</string>
    <string name="text_hint_phone">067 00 00 000</string>
    <string name="text_event">Опис події:</string>
    <string name="text_registration">Зараєструвати</string>
    <string name="menu_refresh">Оновити</string>
    <string name="send_button">Send Notification</string>
    <string name="notification_message_hint">Enter notification message text</string>
</resources>
